# RelativeMap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
relmap/: __init__.py  _overlapping_text.py  _sensitivity.py  test.py
