[project]
name = "relmap"
version = "0.1.3"
description = "Create a map from (relative) node constraints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cvxopt~=1.3"]
authors = [{ name = "Torsten Wörtwein", email = "twoertwein@gmail.com" }]
license = "BSD-3-Clause"

[project.urls]
homepage = "https://github.com/twoertwein/RelMap"
repository = "https://github.com.org/twoertwein/RelMap"

[project.optional-dependencies]
plot = [
    "numpy~=2.3",
    "matplotlib~=3.10",
    "shapely~=2.1",
]

[dependency-groups]
dev = [
    "pre-commit~=4.3",
    "pytest~=8.4",
    "ruff~=0.12",
    "scipy~=1.16",
    "ty~=0.0.1a20",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-exclude = ["relmap/test.py"]
wheel-exclude = ["relmap/test.py"]
module-name = "relmap"
module-root = ""

[tool.ruff]
target-version = "py312"
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4",  # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "N", # pep8-naming
    "PERF",  # perflint
    "PLE",  # pylint error
    "UP",  # pyupgrade
    "FURB",  # refurb
    "RUF",  # ruff
]
ignore = [
    "ANN401",  # allow Any
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"relmap/test.py" = ["D100", "D103"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
